--- a/contacto.html
+++ b/contacto.html
@@ -27,6 +27,13 @@
     <p><strong>Dirección:</strong> Ipiales, Nariño - Colombia</p>
 </section>
 
+<section id="qr" style="text-align: center; padding: 30px;">
+    <h2>Escanea y visita nuestra página</h2>
+    <img src="qr/QR Nariño Vive.png" 
+         alt="Código QR NariñoVive" width="200" height="200">
+  </section>
+  
+
 <footer>
     <p>&copy; 2025 NariñoVive</p>
 </footer>
