--- a/index.html
+++ b/index.html
@@ -11,9 +11,13 @@
     <header class="encabezado">
         <div class="logo-titulo">
           <img src="img/fondo.png" alt="Logo NariñoVive" class="logo">
-          <h1 class="titulo">NariñoVive</h1>
+          <div>
+            <h1 class="titulo">NariñoVive</h1>
+            <p class="slogan">Descubre la magia de Ipiales: Cultura, Naturaleza y Aventura</p>
+          </div>
         </div>
       </header>
+      
       
 
 <nav>
