--- a/destinos.html
+++ b/destinos.html
@@ -10,6 +10,7 @@
 
 <header>
     <h1>Destinos NariñoVive</h1>
+    <p class="slogan">Descubre la magia de Ipiales: Cultura, Naturaleza y Aventura</p>
 </header>
 
 <nav>
