--- a/contacto.html
+++ b/contacto.html
@@ -10,6 +10,7 @@
 
 <header>
     <h1>Contacto NariñoVive</h1>
+    <p class="slogan">Descubre la magia de Ipiales: Cultura, Naturaleza y Aventura</p>
 </header>
 
 <nav>
