--- a/tarifas.html
+++ b/tarifas.html
@@ -10,6 +10,7 @@
 
 <header>
     <h1>Tarifas de Tours</h1>
+    <p class="slogan">Descubre la magia de Ipiales: Cultura, Naturaleza y Aventura</p>
 </header>
 
 <nav>
